feat: add bilingual debloat profiles and independent fixes